# vkRendr

./: .gitignore  .gitmodules  CMakeLists.txt
resources/zen-studio/source/: room.fbx  zen_studio.fbx
src/: Application.cpp  Application.hpp  HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  main.cpp
src/FirstApp/: FirstApplication.cpp  FirstApplication.hpp
src/renderer/: camera.hpp  cameraManipulator.cpp  config.cpp  config.hpp  coreTypes.hpp  debug.cpp  debug.hpp  device.cpp  device.hpp  instance.cpp  instance.hpp  keyCodes.h  renderSetup.cpp  renderSetup.hpp  renderer.hpp  resourceDataTypes.hpp  swapChain.cpp  swapChain.hpp  test.cpp  timer.hpp  transform.hpp  utility.cpp  utility.hpp  vertex.hpp  window.cpp  window.hpp
src/renderer/core/: device.hpp  deviceConfig.hpp  instance.cpp  instance.hpp  renderSetup.cpp  renderSetup.hpp  renderer.cpp  renderer.hpp  rendr.cpp  rendr.hpp  resourceDataTypes.hpp  swapChain.cpp  swapChain.hpp  swapChainConfig.hpp  utility.cpp  utility.hpp  window.cpp
src/renderer/utils/: camera.hpp  cameraManipulator.hpp  inputManager.cpp  inputManager.hpp  simpleDrawableObj.hpp  simpleMaterial.hpp  transform.hpp  vertex.hpp
src/shaders/: CompileShaders.bat  fvertex.spv  fvertex.vert
